# TITANIUS_CERBERRUS

./: LICENSE  MONETIZATION.md  README.md  index.html  pyproject.toml  titanius_cli.py
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml  pages.yml  titanius-web-steward.yml
agents/: TITANIUS_WEB_STEWARD.md
config/: lead_recovery_scoring.v1.json
core/: __init__.py  envelope.py  registry.py
docs/: 30_DAY_LAUNCH_SYSTEM.md  FIRST_SKILL_LEAD_RECOVERY.md  LANDING_PAGE_COPY.md  LOCAL_RUNBOOK.md  MONEY_MACHINE_BLUEPRINT.md  OFFERS_AND_PRICING.md
reports/: lead_recovery_report.example.json
samples/: leads_demo.v1.json
tests/: test_lead_recovery.py
web/: ROOT.md
web/backlog/: missing-items.md
workflows/: __init__.py  lead_recovery.py
